Rename the project from “lang-table” to “langtable”
A “-” does not work in the name of a Python module, i.e. lang-table.py
does not work. Therefore, I used “langtable.py”. But then it
is nicer if the .spec file and the the whole project is als called
just “langtable” for consistency.

--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 ======================================================================
-lang-table
+langtable
 ======================================================================
 
 Purpose of this package
 =======================
 
-lang-table is used to guess reasonable defaults for locale, keyboard,
+langtable is used to guess reasonable defaults for locale, keyboard,
 territory, …, if part of that information is already known. For
 example, guess the territory and the keyboard layout if the language
 is known or guess the language and keyboard layout if the territory is
@@ -26,7 +26,7 @@ https://fedoraproject.org/wiki/Licensing:MIT?rd=Licensing/MIT#Modern_Style_witho
 Installation
 ============
 
-To install lang-table, run
+To install langtable, run
 
      make install DESTDIR=/usr
 
