--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-08-13  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.10 released.
+	* Add translations for Belarusian and Belarus in Latin script (reported by Vratislav Podzimek)
+
 2013-08-03  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.9 released.
