--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-08-19  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.11 released.
+	* Add translations for DE and NL territories in nds (reported by Vratislav Podzimek)
+
 2013-08-13  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.10 released.
