--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-08-28  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.12 released.
+	* Match case insensitively in languageId() (Resolves: rhbz#1002000 (case insensitive languageId function needed))
+
 2013-08-19  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.11 released.
