Add support for timezone translations
Resolves part of rhbz#1015209

(This is cherry-picked from the master branch of langtable)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-01-09  Mike FABIAN  <mfabian@redhat.com>
+
+	* Add support for timezone translations to resolve part of rhbz#1015209
+
 2013-09-05  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.13 released.
