--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-09-05  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.13 released.
+	* Serbian keyboards are 'rs' not 'sr' (by Vratislav Podzimek)
+
 2013-08-28  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.12 released.
