--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-09-16  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.15 released.
+	* Add keyboards "ara", "ara(azerty)", "iq", and "sy" (Resolves: rhbz#1008389)
+
 2013-09-15  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.14 released.
