--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-11-04  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.18 released.
+	* Add anp
+	* Do not fail if a timezone id part cannot be found in the database (Vratislav Podzimek reported that error)
+
 2013-10-22  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.17 released.
