--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2013-11-11  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.19 released
+	* Add SS
+	* More translations for anp from CLDR
+	* Add information about default input methods and a query function
+
 2013-11-04  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.18 released.
