--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-11-21  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.21 released
+	* Make America/New_York the highest ranked timezone for US and yi (Resolves: rhbz#1031319)
+
 2013-11-20  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.20 released
