--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-08-25  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.26 released
+	* Use English as the default language for India (Resolves: rhbz#1133188)
+
 2014-07-09  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.25 released
