--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2014-08-27  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.27 released
+	* Use Hindi again as the default language for India (Resolves: rhbz#1133188)
+	* Add some new translations from CLDR
+	* Some translation fixes from CLDR
+
 2014-08-25  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.26 released
