--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-01-14  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.29 released
+	* add CW, cmn, hak, lzh, quz, the
+
 2014-09-24  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.28 released
