--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-05-13  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.33 released
+	* Translation fix for Tagalog <-> Filipino (Resolves: rhbz#1220775)
+	* Translation fixes from Wikipedia and CLDR
+
 2015-05-12  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.32 released
