--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-07-01  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.34 released
+	* Add a function list_scripts() to list scripts used for a language or in a territory
+	* Translation fix from CLDR
+	* Add Sphinx markup to public functions
+
 2015-05-13  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.33 released
