--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2017-02-08  Mike FABIAN  <mfabian@redhat.com>
+
+	* Version 0.0.37 released
+	* Add some new translations from CLDR
+	* Add sgs
+	* Add chr
+	* Add Hung script
+
 2016-07-20  Mike FABIAN  <mfabian@redhat.com>
 
 	* Version 0.0.36 released
