--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-11-05  Mike FABIAN  <mfabian@redhat.com>
+
+	* Fix typo in mo entry
+	* Add mnw
+	* Fix translation of IN in te
+
 2019-09-17  Mike FABIAN  <mfabian@redhat.com>
 
 	* Three changed translations into sr_Latn from CLDR
