--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-12-12  Mike FABIAN  <mfabian@redhat.com>
+
+	* Add new public function parse_locale()
+	* Let info() print a bit more stuff
+
 2019-11-05  Mike FABIAN  <mfabian@redhat.com>
 
 	* Fix typo in mo entry
