--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-01-14  Mike FABIAN  <mfabian@redhat.com>
+
+	* Parse stuff in glibc locale names after @ which is not a script as a variant
+	* Add ckb_IQ.UTF-8 locale
+
 2019-12-20  Mike FABIAN  <mfabian@redhat.com>
 
 	* Make parse_locale() return something reasonable for
