--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-10-29  Sundeep ANAND <suanand@redhat.com>
+
+	* add list_common_languages derived from gnome-control-center
+
 2020-09-15  Mike FABIAN  <mfabian@redhat.com>
 
 	* Capitalize the return values of language_name() and territory_name()
