--- a/README
+++ b/README
@@ -1,30 +1,29 @@
-======================================================================
 langtable
-======================================================================
+
+[1]PyPI version
+
+Guessing reasonable defaults for locale, keyboard layout, territory, and
+language.
 
 Purpose of this package
-=======================
 
 langtable is used to guess reasonable defaults for locale, keyboard,
-territory, …, if part of that information is already known. For
-example, guess the territory and the keyboard layout if the language
-is known or guess the language and keyboard layout if the territory is
-already known.
+territory, …, if part of that information is already known. For example,
+guess the territory and the keyboard layout if the language is known or guess
+the language and keyboard layout if the territory is already known.
 
 License
-=======
 
 GPLv3+, see the included file “COPYING”.
 
 Translations for languages and territory names are from CLDR which is
 governed by the Unicode Terms of Use, see the included file
-“unicode-license.txt”. The short name for this Unicode license is
-“MIT”. See:
+“unicode-license.txt”. The short name for this Unicode license is “MIT”. See:
 
-https://fedoraproject.org/wiki/Licensing:MIT?rd=Licensing/MIT#Modern_Style_without_sublicense_.28Unicode.29
+[2]https://fedoraproject.org/wiki/Licensing:MIT?rd=Licensing/MIT#
+Modern_Style_without_sublicense_.28Unicode.29
 
 Installation
-============
 
 To install langtable, run
 
@@ -36,10 +35,9 @@ To create a distribution tarball run
 
 To run the test cases in the source directory:
 
-     make test
+     make check
 
 How to use it
-=============
 
 import langtable
 
@@ -70,7 +68,13 @@ Functions in the public API:
      list_all_input_methods()
      list_all_console_fonts()
 
-Some examples to show the usage are found in the documentation
-of the public functions in langtable.py.
+Some examples to show the usage are found in the documentation of the public
+functions in langtable.py.
 
-(Some more examples are in the test cases in the file test_cases.py):
+Some more examples are in the test cases in the file test_cases.py.
+
+
+References:
+
+[1] https://badge.fury.io/py/langtable
+[2] https://fedoraproject.org/wiki/Licensing:MIT?rd=Licensing/MIT#Modern_Style_without_sublicense_.28Unicode.29
